<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.inventorymanagement.MainActivity">
    <item android:id="@+id/action_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_update"
        android:title="@string/update"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_export"
        android:title="@string/exportDatabase"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_import"
        android:title="@string/importDatabase"
        app:showAsAction="ifRoom" />

</menu>
